SERVER-69001: Have initial sync persist its last oplog time into the minvalid document.

(cherry picked from commit ff2fffdf496ac1bc039cd8c84024cc6159cf80b6)
(cherry picked from commit 14b1ea6d58cf2a2169b2a07268fa2266419703b4)